
SMTv3.4 Release Notes
_____________________

	API Additions:
		-TouchSource.LEAP added, which supports the Leap Motion
		-TouchSource.MULTIPLE added, which runs multiple TouchSources at once

	API Changes:
		-TouchClient's setDrawTouchPoints() deprecated/renamed to setTouchDraw()
		-SMTUtilities' checkImpl() and getZoneMethod() have an additional first parameter which is the callingClass to by definition return false that an implementation exists for
		-Zone.touchDown(Touch) and Zone.touchUp(Touch) have been removed, as they only mistakenly did anything more then just call assign(Touch)/unassign(Touch), either use assign/unassign directly or touchDownImpl/touchUpImpl in subclasses

SMTv3.3 Release Notes
_____________________
	API Additions:
		-Zone.dragWitinParent() will drag a zone, but keep it inside its parent zone
		-TouchClient.init() now accepts any number of objects to check for methods in addition to the PApplet
		-getZone(String[,Class<T extends Zone>]) this takes a string and returns a Zone, optionally a class such as Zone.class can be given as a second parameter, in which case an attempt to cast it to this class will be made. This should allow the use of less globally defined Zones
		-many built-in Zones have more protected variables and protected methods to make it easier to re-implement their draw method
		-KeyboardZone now has an alpha that can be set in constructors
		
	Bug Fixes:
		-KeyboardZone's keys now resize properly with the KeyboardZone when setSize(int,int) is called, fontSize changes also
		
	Feature Changes:
		-KeyboardZone now has a 10% size border to make it easier to move (5% zone size on each side)
		-KeyboardZone's letters now switch between lower and upper case depending on if shift is pressed
		
	-Added many examples, in a clear hierarchy similar to Processing's

SMTv3.2 Release Notes
_____________________

	API Changes: